Person details: Querying similar persons and trend separately
